2005-10-12  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/text/AbstractDocument/ElementChange2.java:
	New test.

2005-10-12  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getDefaults.java
	(test): strengthened tests for FileView icons.

2005-10-12  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JFileChooser/accept.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/addChoosableFileFilter.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/constructors.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/getAccessory.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/getApproveButtonMnemonic.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/getApproveButtonText.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/getApproveButtonToolTipText.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/getChoosableFileFilters.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/getControlButtonsAreShown.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/getDialogTitle.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/getDialogType.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/getFileFilter.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/getFileSelectionMode.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/getFileSystemView.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/getFileView.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/getSelectedFiles.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/isAcceptAllFileFilterUsed.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/isFileHidingEnabled.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/MyFileFilter.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/MyFileSystemView.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/removeChoosableFileFilter.java: new test,